Ported the build system to Meson.
For this cycle, we will still support autotools. This is not guaranteed
however for 3.27 and later.

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,6 +8,8 @@ DIST_SUBDIRS = vapi src data po man
 
 EXTRA_DIST = \
 	autogen.sh \
+	**/meson.build \
+	meson_options.txt \
 	$(NULL)
 
 ChangeLog:
